# AFDEN-Python-Workshop

./: 1-Intro to Python.ipynb  2-Pandas.ipynb  README.md  main.py  pyproject.toml  requirements.txt
data/: ccm.csv
