[project]
name = "afden-python-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "nltk>=3.9.1",
    "pandas>=2.3.2",
    "regex>=2025.7.34",
    "regpyhdfe>=0.0.10",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "textstat>=0.7.8",
    "wrds>=3.1.6",
]
